# xpdf-4.00

./: .gitignore  CMakeLists.txt  aconf.h.in  cmake-config.txt
xpdf/: CMakeLists.txt  CharCodeToUnicode.cc  CharCodeToUnicode.h  GlobalParams.cc  GlobalParams.h  UnicodeToUnicodeFontRules.h
xpdf-qt/: CMakeLists.txt  QtPDFCore.cc  QtPDFCore.h  XpdfApp.cc  XpdfApp.h  XpdfViewer.cc  XpdfViewer.h  XpdfWidget.cc  XpdfWidget.h  XpdfWidgetPrint.cc  XpdfWidgetPrint.h  icons.qrc  xpdf.cc  xpdf.rc
